[package]
name = "egccri-snowflake"
version = "0.1.0"
edition = "2021"
authors = ["zifeng.1024@gmail.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snowflake = { path="crates/snowflake" }
zookeeper = "0.6"
rand = "0.8.5"
clap = { version = "3.1.12", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.79"
toml = "0.5.1"
log = "0.4.16"
thiserror = "1.0.30"
lazy_static = "1.4.0"
